# samples

./: .gitignore
c-lang/base64/: decode.c  encode.c
c-lang/bits/: lsb.c  msb.c
c-lang/calender/: mjd.c
c-lang/colorspace/: Makefile  bgr_to_rgb.c  deinterleave.c  i420_to_rgb.c  i420_to_yuv444.c  test.c  test1-1.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test6.yuv  yuv_to_rgb.c  yuv_to_rgb2.c
c-lang/container/: hmap.c  hmap.h
c-lang/font/: Makefile  font.c  font.h  png_file.c  png_file.h  sample.c  utf8.c  utf8.h
c-lang/geom/: hausdorff.c  homography.c  homography.h  inside_check.c
c-lang/hash/: fnv1.c  fnv1.h  sha1.c  sha1.h
c-lang/jpeg/: jpeg.h  jpeg_decode.c  jpeg_encode.c  test.c  util.h
c-lang/misc/: base64.c  comma.c  cronog.c  cronog.h  test.c  timer.c
c-lang/objarray/: Makefile  objarray.c  objarray.h  test.c
c-lang/openh264/: Makefile  Makefile.darwin  Makefile.mingw32  Makefile.mingw64  Makefile.x86_64-linux  README.md  avx.c  avx.h  h264dec.c  h264dec.h  i420.c  i420.h  main.c  neon.h  util.c
c-lang/path/: mkpath.c
c-lang/que/: que.c  que.h
c-lang/scaling/: Makefile  aam.c  aam.h  aam_test.c  blm.c  blm.h  nnm.c  nnm.h  png_file.c  png_file.h
c-lang/search/: binsearch.c
c-lang/sort/: combsort.c
c-lang/string/: Makefile  comma.c  escape_js.c  slicer.c  slicer.h  test.c
colorspace/: Makefile  test.c  yuv_to_rgb.c
fill/: bitmap_fill.c
hp42s/: README.md  ceil.42s  floor.42s  gcd.hp42s  mjd.42s  stdnrm.42s
rust/try_retina/: Cargo.toml
rust/try_retina/src/: main.rs
search/: binsearch.c
sort/: combsort.c
(+45 files in other folders)
