[package]
name = "try_retina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retina = "0.4"
url = "2.3"
futures = "0.3"
h264-reader = "0.6"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0"
